# nihao

./: .bashutils  .gitignore  .variables  README.md  helper.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pipeline.yml
atml/: run_jupyter.sh  zipline_test.ipynb
atml/.zipline/data/quandl/2021-04-25T11;54;42.155227/daily_equities.bcolz/: __attrs__
data/: 0001.pkl  GOOG.pkl
deprecated/: Milestone 2_Starter Notebook.ipynb  data_download.ipynb  main.sh  quant001.ipynb
deprecated/.zipline/data/quandl/2021-04-25T11;54;42.155227/: assets-7.sqlite
notebook/: bonds.ipynb  learn_algorithmic_trading.ipynb  libs_test.ipynb  mpff.ipynb
notebooks/: fetcher.ipynb  spark_notebook.ipynb
src/tgedr/nihao/: commons.py  ticker_fetcher.py
src/tgedr/nihao/commons/: chain.py  chainable.py  processor.py  sink.py  source.py
src/tgedr/nihao/fetchers/: tickers_to_s3_parquet.py
src/tgedr/nihao/impls/sinks/: s3.py
src/tgedr/nihao/impls/sources/: s3.py
src/tgedr/nihao/s3/: s3.py
src/tgedr/nihao/source/: yahoo_tickers.py
test/: conftest.py
test/tgedr/nihao/: test_s3.py  test_ticker_fetcher.py  test_yahoo_tickers.py
test/tgedr/nihao/assorted/: test_chainable.py
test/tgedr/nihao/commons/: test_chain.py  test_chainable.py  test_handler.py  test_processor_chain.py
test/tgedr/nihao/impls/: test_s3.py  test_yahoo_tickers.py
test/tgedr/nihao/impls/processors/: test_ticker_simple_analysis.py
test/tgedr/nihao/processors/: test_ticker_simple_analysis.py
test/tgedr/nihao/sink/: test_s3.py
(+1402 files in other folders)
