[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "nihao"
author = "jtviegas"
author-email = "jtviegas.js@gmail.com"
home-page = "https://github.com/jtviegas/nihao"
description-file = "README.md"
dist-name = "nihao"
requires-python = ">=3.7"
requires = [ "numpy", "pandas", "pandas-datareader", "statsmodels", "matplotlib" ]
classifiers = [ "Programming Language :: Python :: 3.7", ]
[tool.flit.metadata.requires-extra]
test = [ "pytest >=6.1.2", ]
